# deafrica-sandbox-notebooks

./: .gitignore  Brian_LandCover_Copernicus_100m.ipynb  CITATION.cff  Coastal_Erosion.ipynb  DEAfricaInfo.ipynb  DEAfricaLandingPage.ipynb  DEAfricaThematic.ipynb  DEAfrica_Notebooks_and_SDG_Indicators.ipynb  DEAfrica_coding.ipynb  DEAfrica_notebooks_template.ipynb  README.md  Test.ipynb  Untitled.ipynb  Using_load_masked_usgs.ipynb  datacube_load_test.ipynb  elevation_example.ipynb  my-change.ipynb  odc-waterbodies.ipynb  shell.nix
.github/: pull_request_template.md
Beginners_Guide/: README.md
Beginners_guide/: 01_Jupyter_notebooks.ipynb  01_jupyter_notebooks.ipynb  02_Products_and_measurements.ipynb  02_products_and_measurements.ipynb  03_Loading_data.ipynb  05_Basic_analysis.ipynb  06_Intro_to_numpy.ipynb  06_Parallel_processing_with_dask.ipynb  06_parallel_processing_with_dask.ipynb  07_Intro_to_xarray.ipynb  08_Parallel_processing_with_dask.ipynb  README.md  index.rst
Case_studies/: Coastal_erosion.ipynb  README.md
Climate_action_toolkit/: Climate_action_toolkit.ipynb
DCAL/: README.md
Datasets/: ALOSPALSAR.ipynb  ALOS_PALSAR_Annual_Mosaic.ipynb  ALOS_PALSAR_annual_mosaic.ipynb  Africapolis_urban_agglomerations.ipynb  Aquatic.ipynb  CGLM_Lake_Water_Quality.ipynb  CHIRPS.ipynb  Climate_Data_ERA5_AWS.ipynb  Coastlines.ipynb  Cropland_extent.ipynb  DIWASA.ipynb  Digital_Elevation_Models.ipynb  ERA5.ipynb  ESRI_Land_Cover.ipynb  ESRI_Landcover_Classification.ipynb  ETI_IWMI_DIWASA.ipynb  Fractional_Cover.ipynb  Fractional_cover.ipynb  GeoMAD.ipynb  Global_Mangrove_Watch.ipynb  Global_mangrove_watch.ipynb  High_Resolution_Population_Density.ipynb  Introduction_to_WOfS.ipynb  LULC_Landcover_Classification.ipynb  Land_Use_Land_Cover_Maps.ipynb  Land_surface_temperature.ipynb  Landcover_Classification.ipynb  Landsat.ipynb  Landsat_Surface_Reflectance.ipynb  Landsat_Surface_Temperature.ipynb  Landsat_collections.ipynb  Landsat_collections_quick-guide.ipynb  NDVI_Anomaly.ipynb  NDVI_Climatology.ipynb  OpenStreetMap.ipynb  Planet_basemap.ipynb  QuarterlyRollingGeoMAD.ipynb  README.md  Rainfall_CHIRPS.ipynb  RollingGeoMAD.ipynb  (+20 more)
Frequently_used_code/: .flake8  Analyse_multiple_polygons.ipynb  Applying_WOFL_WOfS.ipynb  Applying_WOfS_bitmasking.ipynb  Calculating_band_indices.ipynb  Calculating_band_indices_Spyndex.ipynb  Classification_using_image_thresholding.ipynb  Cloud_and_pixel_quality_masking.ipynb  Cloud_and_quality_masking.ipynb  Compare_GEE_S2_Cloud_ Prob_with_ESA_SCL.ipynb  Compare_GEE_S2_Cloud_Prob_with_thresholds.ipynb  Contour_extraction.ipynb  DEA_urbanization.ipynb  Downloading_data_with_STAC.ipynb  Exporting_GeoTIFFs.ipynb  Exporting_continental_animation.ipynb  GSWE_2COG.ipynb  Generating_composites.ipynb  Generating_geomedian_composites.ipynb  Geomedian_composites.ipynb  GoogleDriveAccess-Copy1.ipynb  Googledrive.ipynb  Image_segmentation.ipynb  Integrating_external_data.ipynb  Integrating_with_Google_Drive.ipynb  Kenya_properties.csv  Machine_learning_with_ODC.ipynb  Machine_learning_with_ODC_interactive.ipynb  Mangrove Analysis.ipynb  Mineral_indices_S2.ipynb  Monitoring_water_quality.ipynb  NDWI_WOFSValidation.ipynb  Planet_basemap.ipynb  Play_S2.ipynb  Plotting_waterbody_data.ipynb  Principal_component_analysis.ipynb  README.md  RadiantEarth.ipynb  Rasterise_vectorise.ipynb  Rasterize_vectorize.ipynb  (+23 more)
HLC/: hlc.ipynb
HLS/: 1_HL87_continental_data_collection.ipynb  2_HL8L7_plots.ipynb  4_HLS_plots.ipynb  5_HL8L7_timeseries.ipynb  6_hls_dea_testing.ipynb  7_NDVI_climatology-rolling_mean.ipynb  7_Vegetation_anomalies_seasonal.ipynb  8_NDVI_climatology-monthly.ipynb  8_Vegetation_anomalies_monthly.ipynb  9_Plugin_testing.ipynb  HLS_plots.ipynb  hl8l7.ipynb  hl8l7_early_testing.ipynb  hls.ipynb  hls_continental.ipynb  ndvi_climatology.yaml
MGCI/: MGCI.ipynb
MNDWI comparison/: MNDWI comparison.ipynb  MNDWI comparison_multiplelocations.ipynb
OSS/: 01_LULC_BurkinaFaso.ipynb  01_LULC_Tunisia.ipynb  01_LULC_reclassification-BurkinaFaso.ipynb  01_LULC_reclassification-Tunisia.ipynb  01_LULC_reclassification.ipynb  02_NDVI_Tunisia.ipynb  02_NDVI_reclassification-BurkinaFaso.ipynb  02_NDVI_reclassification-Tunisia.ipynb  02_NDVI_reclassification.ipynb  03_Cross_LULC_NDVI_matrix-BurkinaFaso.ipynb  03_Cross_LULC_NDVI_matrix-Tunisia.ipynb  03_Cross_LULC_NDVI_matrix.ipynb  04_LULC_Validation_BurkinaFaso.ipynb  04_LULC_Validation_Tunisia.ipynb  Aboveground Biomass estimationV1 (1).ipynb  LULC_reclassification_Tunisia.ipynb  NDVI_reclassification_BurkinaFaso.ipynb  Vegetation_change_detection_BurkinaFaso.ipynb  classification_result.csv
RCMRD_Demo/: Coastal_Erosion.ipynb  Demo_Coastal_Erosion.ipynb  Demo_Crop_Growth.ipynb  Demo_Water_Extent.ipynb
Real_world_examples/: Animation_with_rainfall.ipynb  Benin_CaseStudy.ipynb  Brian_Mining_LandChange_Mar2020.ipynb  Brian_Mining_WaterDetection_Mar2020.ipynb  Burnt_area_mapping.ipynb  (+95 more)
Tools/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  default.nix  environment.yml  index.rst  pyproject.toml  setup.py
Tools/conda/: environment.yaml  requirements.in  requirements.txt
Tools/deafrica_tools/: README.md  __init__.py  areaofinterest.py  bandindices.py  classification.py  classificationtools.py  coastal.py  coastaltools.py  dask.py  datahandling-SAR.py  datahandling.py  datahandling_SAR.py  externaldrive.py  feature_layer_functions.py  get_config.py  load_africapolis.py  load_era5.py  load_isda.py  load_soil_moisture.py  load_wapor.py  notebookapp_changefilmstrips.py  notebookapp_crophealth.py  plotting.py  radar_indices.py  segmentation.py  spatial.py  temporal.py  waterbodies.py  wetland.py  wetlands.py  wetlands_app.py  wofsclassifier.py
Tools/deafrica_tools/app/: animations.py  areaofinterest.py  changefilmstrips.py  crophealth.py  deacoastlines.py  forestmonitoring.py  geomedian.py  imageexport.py  notebookapp_wetlands.py  planetbasemap.py  wetlandsinsighttool.py  widgetconstructors.py
Tools/deafrica_tools/locales/fr/LC_MESSAGES/: deafrica_tools.mo  deafrica_tools.po
Tools/tests/: test_tools.py
(+645 files in other folders)
