# pyproject.toml tells “frontend” build tools like pip and build what “backend” tool to use to create distribution packages for your project.

# Using poetry for dependency management and packaging.

# Package metadata.
[tool.poetry]
name = "deafrica-tools"
version = "2.0.2"
description = "Functions and algorithms for analysing Digital Earth Africa data."
license = "Apache-2.0"
authors = ["Digital Earth Africa <systems@digitalearthafrica.org>"]
readme = "README.md"
homepage = "https://github.com/digitalearthafrica/deafrica-sandbox-notebooks"
repository = "https://github.com/digitalearthafrica/deafrica-sandbox-notebooks"
documentation = "https://docs.digitalearthafrica.org/en/latest/sandbox/notebooks/Tools/index.html"
packages = [{include = "deafrica_tools"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/digitalearthafrica/deafrica-sandbox-notebooks/issues"

# Dependencies and dependency groups
[tool.poetry.dependencies]
# declaring the python version for which your package is compatible is mandatory
python = ">=3.9,<3.12"
geopandas = "0.13.2"
shapely = "2.0.1"
geojson = "3.0.1"
numpy = "1.23.5"
dask = {version = "2023.3.1", extras = ["array", "complete", "dataframe"]}
joblib = "1.2.0"
pandas = "2.0.2"
xarray = "2023.5.0"
dask-ml = "2023.3.24"
botocore = "1.27.59"
datacube = {version = "1.8.13", extras = ["celery", "performance", "s3"]}
scikit-learn = "1.2.2"
tqdm = "4.65.0"
requests = "2.31.0"
matplotlib = "3.7.1"
otps = {version = "0.3.2", source = "packages.dea.ga.gov.au"}
owslib = "0.29.2"
aiohttp = "3.8.4"
gdal = "3.6.3"
pytz = "2023.3"
odc-algo = "0.2.3"
fsspec = "2023.3.0"
rasterio = "1.3.7"
pyproj = "3.5.0"
boto3 = "1.24.59"
pystac = "1.7.3"
folium = "0.12.1"
ipywidgets = "8.0.6"
branca = "0.6.0"
ipython = "8.13.1"
ipyleaflet = "0.17.2"
scikit-image = "0.21.0"
odc-ui = {version = "0.2.1.dev3673", source = "packages.dea.ga.gov.au"}
fiona = "1.9.4.post1"
rasterstats = "0.19.0"
geopy = "2.3.0"
hdstats = "0.2.1"
packaging = "23.1"
seaborn = "0.12.2"
traitlets = "5.9.0"
rioxarray = "0.14.1"
numexpr = "2.8.4"
datetime = "5.1"
scipy = "1.10.1"

# Package sources for discovery and installation of dependencies.

[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[[tool.poetry.source]]
name = "packages.dea.ga.gov.au"
url = "https://packages.dea.ga.gov.au"
priority = "explicit"


[[tool.poetry.source]]
name = "google-coral"
url = "https://google-coral.github.io/py-repo/"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
# List of packages that are needed to build deafrica-tools.
# Build frontends like pip will install them automatically 
# in a temporary, isolated virtual environment for use 
# during the build process.
requires = ["poetry-core>=1.0.0"]
# Python object that build frontends will use to perform the build.
build-backend = "poetry.core.masonry.api"

# using setuptools for dependency management and packaging

#[build-system]
# List of packages that are needed to build deafrica-tools.
# Build frontends like pip will install them automatically 
# in a temporary, isolated virtual environment for use 
# during the build process.
#requires = ["setuptools>=61.0","wheel"]
# Python object that build frontends will use to perform the build.
#build-backend = "setuptools.build_meta"