[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deafrica-tools"
# reflect version changes in deafrica_tools/__init__.py
version = "2.5.5"
description = "Functions and algorithms for analysing Digital Earth Africa data."
authors = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
maintainers = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
readme = {file = "README.md", content-type = "text/markdown"}
# If you change the License, remember to change the Trove Classifier!
license = {file = "LICENSE"}
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: GIS',
]
requires-python = ">=3.9"
dependencies= [
    "aiohttp",
    "aiobotocore[boto3]", # for boto3
    "branca",
    "dask[complete]",
    "dask-ml",
    "dask-gateway",
    "datacube[performance,s3]",
    "fiona",
    "folium",
    "fsspec",
    "gdal",
    "geojson",
    "geopandas",
    "geopy",
    "hdstats",
    "ipyleaflet",
    "ipython",
    "ipywidgets",
    "joblib",
    "localtileserver",
    "matplotlib",
    "numexpr",
    "numpy",
    "odc-algo",
    "odc-geo>=0.4.2",
    "odc-ui",
    "OWSLib",
    "packaging",
    "pandas",
    "plotly",
    "pyproj",
    "pystac-client",  # for pystac
    "python-dateutil",
    "pyTMD >= 2.1.5",
    "pytz",
    "rasterio",
    "rasterstats",
    "requests",
    "rioxarray",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shapely",
    "timescale",
    "tqdm",
    "xarray",
    "gcsfs",
]

[project.optional-dependencies]
tests = [
    "pytest",
]
lint = [
    "black[jupyter]",
    "flake8",
    "isort>=5.0.0",
    "pre-commit",
]
dev = [
    "deafrica_tools[tests, lint]",
]

[project.urls]
Homepage = "https://github.com/digitalearthafrica/deafrica-sandbox-notebooks"
Repository = "https://github.com/digitalearthafrica/deafrica-sandbox-notebooks"
Documentation = "https://docs.digitalearthafrica.org/en/latest/sandbox/notebooks/Tools/index.html"
"Bug Tracker" = "https://github.com/digitalearthafrica/deafrica-sandbox-notebooks/issues"

[tool.setuptools]
packages = ["deafrica_tools"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

